--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-        java: 1.7
+        java: corretto8
   pre_build:
     commands:
     - echo "Entered the pre-build phase"
